flux/apps/base/pihole-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: ingress
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pihole-web
  namespace: ingress
  labels:
    kubernetes.io/service-name: pihole-web
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8080
endpoints:
  - addresses:
      - 192.168.1.101
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.110
spec:
  ingressClassName: cilium
  tls:
    - secretName: pihole-tls
      hosts:
        - pihole.towerundersiege.com
  rules:
    - host: pihole.towerundersiege.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  number: 8080
